stop anmition and fix overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
 .page-wrapper{
     overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
